--- a/src/app/components/app-header.scss
+++ b/src/app/components/app-header.scss
@@ -25,7 +25,7 @@
 
   &:before {
     padding-right: 5px;
-    color: #fff;
+    color: #000;
     font-family: 'FontAwesome';
     line-height: 20px;
   }
