--- a/src/common/styles.scss
+++ b/src/common/styles.scss
@@ -3,7 +3,7 @@
 '~minx/src/reset',
 '~minx/src/elements',
 'styles/grid';
-
+'~@angular/material/prebuilt-themes/deeppurple-amber.css'
 
 [hidden] {
   display: none !important;
