Error in firebase

--- a/src/common/styles.scss
+++ b/src/common/styles.scss
@@ -2,8 +2,8 @@
 'styles/base',
 '~minx/src/reset',
 '~minx/src/elements',
-'styles/grid';
-'~@angular/material/prebuilt-themes/deeppurple-amber.css'
+'styles/grid',
+'~@angular/material/prebuilt-themes/deeppurple-amber.css';
 
 [hidden] {
   display: none !important;
