--- a/src/common/styles/_settings.scss
+++ b/src/common/styles/_settings.scss
@@ -1,14 +1,14 @@
 //===================================================================
 //  SETTINGS
 //===================================================================
-
-$base-background-color: #9bd2fa !default;
+$base-background-color: #F0FFFF !default;
 $base-font-color: #000 !default;
-$base-font-family: 'aktiv-grotesk-std', Helvetica Neue, Arial, sans-serif !default;
+$base-font-family: 'aktiv-grotesk-std',
+Helvetica Neue,
+Arial,
+sans-serif !default;
 $base-font-size: 18px !default;
 $base-line-height: 24px !default;
-
-
 //===============================================
 //  GRID
 //===============================================
